# autumn

./: .formatter.exs  .gitignore  .gitmodules  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE-APACHE.md  README.md  downloader.exs  find_highlights.sh  gen.langs.rs.exs  gen.samples.exs  justfile  langs.exs  langs.rs.eex  mix.exs  themes.csv  usage-rules.md
.github/: dependabot.yml
.github/workflows/: elixir.yml  nif-release.yml  nif_release.yml  release.yml  rust.yml  rust_ci.yml  static.yml
assets/images/: autumn.xcf
examples/: light_dark_function.livemd  light_dark_manual.livemd  light_dark_vars.livemd
lib/: autumn.ex
lib/autumn/: comptime_utils.ex  css_generator.ex  errors.ex  native.ex  nif_structs.ex  options.ex  theme.ex  theme_generator.ex  themes.ex  themes_generator.ex
lib/mix/tasks/: autumn.gen.stylesheets.ex  autumn.generate_css.ex  autumn.generate_langs.ex  autumn.generate_samples.ex  autumn.generate_themes.ex  autumn.generate_themes_rs.ex
native/autumn/: Cargo.toml  README.md  build.rs
native/autumn/src/: color.rs  constants.rs  lang.rs  langs.rs  lib.rs  theme.rs  themes.rs
native/autumn/src/formatter/: html_inline.rs  html_linked.rs  mod.rs  terminal.rs
native/autumnus_nif/: Cargo.toml
native/autumnus_nif/.cargo/: config.toml
native/autumnus_nif/src/: lib.rs
native/inkjet_nif/: Cargo.toml
native/inkjet_nif/src/: inline_html.rs  lib.rs  themes.rs
native/inkjet_nif/themes/: adwaita_dark.toml  autumn.toml  ayu_dark.toml  ayu_light.toml  ayu_mirage.toml  base16_default_dark.toml  base16_transparent.toml  bogster_light.toml  child.toml  cyan_light.toml  darcula.toml  dark_plus.toml  emacs.toml  everforest_dark.toml  everforest_light.toml  github_dark_colorblind.toml  github_dark_dimmed.toml  github_light_tritanopia.toml  heisenberg.toml  hex_lavender.toml  hex_steel.toml  ingrid.toml  jellybeans.toml  kaolin_light.toml  kaolin_valley_dark.toml  material_darker.toml  material_deep_ocean.toml  material_oceanic.toml  material_palenight.toml  module.toml  molokai.toml  monokai_aqua.toml  monokai_pro.toml  monokai_pro_machine.toml  naysayer.toml  nightfox.toml  noctis.toml  nord_light.toml  onedarker.toml  onelight.toml  (+12 more)
priv/: README.md  test.html
priv/images/: autumn_icon.xcf  autumn_logo.xcf
priv/langs/: README.md
priv/overrides/elixir/: highlights.scm
priv/static/css/: acme.css  adwaita_dark.css  amberwood.css  andromeda.css  ao.css  atelier_cave_dark.css  atelier_cave_light.css  atelier_dune_dark.css  atelier_dune_light.css  atelier_estuary_dark.css  atelier_estuary_light.css  atelier_forest_dark.css  atelier_forest_light.css  atelier_heath_dark.css  atelier_heath_light.css  atelier_lakeside_dark.css  atelier_lakeside_light.css  atelier_plateau_dark.css  atelier_plateau_light.css  atelier_savanna_dark.css  atelier_savanna_light.css  atelier_seaside_dark.css  atelier_seaside_light.css  atelier_sulphurpool_dark.css  atelier_sulphurpool_light.css  aura_dark.css  aura_dark_soft_text.css  aura_soft_dark.css  aura_soft_dark_soft_text.css  autumn.css  autumn_night.css  ayu_dark.css  ayu_evolve.css  ayu_light.css  ayu_mirage.css  bamboo_light.css  bamboo_multiplex.css  bamboo_vulgaris.css  base16_3024.css  base16_apathy.css  (+505 more)
priv/themes/: README.md  base16-tomorrow-night.toml  base16-tomorrow.toml  catppuccin.toml  catppuccin_frappe.toml  catppuccin_latte.toml  catppuccin_macchiato.toml  catppuccin_mocha.toml  dracula.toml  dracula_soft.toml  flatwhite.toml  onedark.toml  onedark_dark.toml  onedark_vivid.toml  onelight.toml  tokyonight.toml  tokyonight_day.toml
priv/themes/0x96f/: 0x96f-theme.json  LICENSE  README.md
priv/themes/adaltas_theme/: README.md  adaltas-theme.json
priv/themes/adech/: README.md  adech.json
priv/themes/adwaita_pastel/: README.md  adwaita.json
priv/themes/alabaster/: LICENSE.md  README.md  alabaster-color-theme.json
priv/themes/amber_monochrome_monitor_crt_phosphor/: amber-monochrome-monitor-crt-phosphor.json
priv/themes/anya/: LICENSE  README.md  anya.json
priv/themes/aquarium_theme/: LICENSE  README.md  aquarium.json
priv/themes/ariake/: LICENSE  README.md  ariake.json
priv/themes/axolosin/: LICENSE  README.md  axolosin.json
priv/themes/aylin_theme/: README.md  aylin.json
priv/themes/ayu_darker/: README.md  ayu-darker.json
priv/themes/barbenheimer/: LICENSE  README.md  barbenheimer.json
priv/themes/base16/: LICENSE  README.md  base16-3024.json  base16-apathy.json  base16-apprentice.json  base16-ashes.json  base16-atelier-cave-light.json  base16-atelier-cave.json  base16-atelier-dune-light.json  base16-atelier-dune.json  base16-atelier-estuary-light.json  base16-atelier-estuary.json  base16-atelier-forest-light.json  base16-atelier-forest.json  base16-atelier-heath-light.json  base16-atelier-heath.json  base16-atelier-lakeside-light.json  base16-atelier-lakeside.json  base16-atelier-plateau-light.json  base16-atelier-plateau.json  base16-atelier-savanna-light.json  base16-atelier-savanna.json  base16-atelier-seaside-light.json  base16-atelier-seaside.json  base16-atelier-sulphurpool-light.json  base16-atelier-sulphurpool.json  base16-atlas.json  base16-ayu-dark.json  base16-ayu-light.json  base16-ayu-mirage.json  base16-bespin.json  base16-black-metal-bathory_custom.json  base16-black-metal-burzum.json  base16-black-metal-dark-funeral.json  base16-black-metal-gorgoroth.json  base16-black-metal-immortal.json  base16-black-metal-khold.json  base16-black-metal-marduk.json  base16-black-metal-mayhem.json  base16-black-metal-nile.json  (+213 more)
priv/themes/batman/: LICENSE  README.md  batman.json
priv/themes/bearded/: README.md  bearded.json
priv/themes/becker_theme/: README.md  becker-theme.json
priv/themes/brook_code_theme/: LICENSE  README.md  brook-code-theme.json
priv/themes/catppuccin/: catppuccin-mauve.json  catppuccin-no-italics-mauve.json
test/: autumn_test.exs
test/autumn/: autumn_test.exs  css_generator_test.exs  theme_generator_test.exs  theme_test.exs  themes_generator_test.exs  zed_theme_test.exs
test/fixtures/: malformed.json  one.json
(+259 files in other folders)
