[workspace]
members = ["native/inkjet_nif", "native/autumn"]
resolver = "2"

[workspace.dependencies]
tree-sitter-highlight = "0.20"
inkjet = { version = "0.9" , default-features = false, features = [
  "html",
  "language-bash",
  "language-c",
  "language-clojure",
  "language-c-sharp",
  "language-commonlisp",
  "language-cpp",
  "language-css",
  "language-diff",
  "language-dockerfile",
  "language-elisp",
  "language-elixir",
  "language-erlang",
  "language-gleam",
  "language-go",
  "language-haskell",
  "language-hcl",
  "language-heex",
  "language-html",
  "language-java",
  "language-javascript",
  "language-json",
  "language-kotlin",
  "language-latex",
  "language-llvm",
  "language-lua",
  "language-make",
  "language-php",
  "language-proto",
  "language-python",
  "language-r",
  "language-regex",
  "language-ruby",
  "language-rust",
  "language-scala",
  "language-scss",
  "language-sql",
  "language-swift",
  "language-toml",
  "language-typescript",
  "language-yaml",
  "language-zig",
] }
