[package]
name = "autumn"
version = "0.1.0"
edition = "2021"
authors = ["Leandro Pereira"]

[lib]
name = "autumn"
path = "src/lib.rs"
crate-type = ["lib"]

[dependencies]
phf = { version = "0.11", features = ["macros"] }
tree-sitter = "0.20"
tree-sitter-highlight = { workspace = true }
inkjet = { workspace = true }
v_htmlescape = "0.15"
