[package]
name = "autumn"
version = "0.1.0"
edition = "2021"
authors = ["Leandro Pereira"]

[lib]
name = "autumn"
path = "src/lib.rs"
crate-type = ["cdylib"]

[dependencies]
rustler = { version = "0.35", features = ["derive", "nif_version_2_15"] }
v_htmlescape = "0.15"
tree-sitter = "0.23"
tree-sitter-highlight = "0.23"
termcolor = "1.4"
anyhow = "1.0"
reqwest = { version = "0.12", features = ["blocking"] }

[build-dependencies]
cc = "1.0"

[features]
default = ["nif_version_2_15"]
nif_version_2_15 = ["rustler/nif_version_2_15"]
