[package]
name = "autumnus_nif"
version = "0.1.0"
edition = "2021"
rust-version = "1.91"

[lib]
name = "autumnus_nif"
path = "src/lib.rs"
crate-type = ["cdylib"]

[dependencies]
once_cell = "1.21"
parking_lot = "0.12"
rustler = "0.37"
autumnus = { version = "0.8.0-beta.3", features = ["all-languages", "nif_version_2_15", "elixir-nif"] }
# autumnus = { git = "https://github.com/leandrocp/autumnus", features = ["all-languages", "nif_version_2_15", "elixir-nif"] }

[features]
default = ["nif_version_2_15"]
# Feature necessary for Rustler Precompiled.
nif_version_2_15 = ["rustler/nif_version_2_15"]
