[package]
name = "inkjet_nif"
version = "0.1.0"
authors = ["Leandro Pereira"]
edition = "2021"

[lib]
name = "inkjet_nif"
path = "src/lib.rs"
crate-type = ["cdylib"]

[dependencies]
rustler = "0.29"
serde = "1.0"
serde_rustler = { git = "https://github.com/avencera/serde_rustler.git", branch = "rustler-0-29" }
toml = "0.7"
once_cell = "1.18"
tree-sitter = "0.20"
tree-sitter-highlight = "0.20"
v_htmlescape = "0.15"
inkjet = { version = "0.8", default-features = false, features = [
  "html",
  "language-html",
  "language-javascript",
  "language-typescript",
  "language-elixir",
  "language-rust",
  "language-ruby",
  "language-swift",
] }

[features]
default = ["nif_version_2_15"]
# Feature necessary for Rustler Precompiled.
nif_version_2_15 = ["rustler/nif_version_2_15"]
