[package]
name = "inkjet_nif"
version = "0.1.0"
edition = "2021"
authors = ["Leandro Pereira"]

[lib]
name = "inkjet_nif"
path = "src/lib.rs"
crate-type = ["cdylib"]

[dependencies]
rustler = "0.29"
serde = "1.0"
tree-sitter-highlight = { workspace = true }
inkjet = { workspace = true }
autumn = { path = "../autumn" }

[features]
default = ["nif_version_2_15"]
# Feature necessary for Rustler Precompiled.
nif_version_2_15 = ["rustler/nif_version_2_15"]
