[package]
name = "inkjet_nif"
version = "0.1.0"
edition = "2021"
authors = ["Leandro Pereira"]

[lib]
name = "inkjet_nif"
path = "src/lib.rs"
crate-type = ["cdylib"]

[dependencies]
rustler = "0.29"
serde = "1.0"
tree-sitter-highlight = "0.20"
inkjet = { version = "0.10.4" , default-features = false, features = [
  "html",
  "language-bash",
  "language-c",
  "language-clojure",
  "language-c-sharp",
  "language-commonlisp",
  "language-cpp",
  "language-css",
  "language-diff",
  "language-dockerfile",
  "language-elisp",
  "language-elixir",
  "language-erlang",
  "language-gleam",
  "language-go",
  "language-haskell",
  "language-hcl",
  "language-heex",
  "language-html",
  "language-java",
  "language-javascript",
  "language-json",
  "language-kotlin",
  "language-latex",
  "language-llvm",
  "language-lua",
  "language-make",
  "language-php",
  "language-proto",
  "language-python",
  "language-r",
  "language-regex",
  "language-ruby",
  "language-rust",
  "language-scala",
  "language-scss",
  "language-sql",
  "language-swift",
  "language-toml",
  "language-typescript",
  "language-yaml",
  "language-zig",
] }
autumn = { path = "../autumn" }

[features]
default = ["nif_version_2_15"]
# Feature necessary for Rustler Precompiled.
nif_version_2_15 = ["rustler/nif_version_2_15"]
